<resources>
    <string name="app_name">Sheltered Living</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="mishan">Mishan</string>
    <string name="back_button">Back button</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="room_number">Room Number:</string>
    <string name="enter_room_number">Enter your Room Number</string>
    <string name="how_can_we_help">How can we help you?</string>
    <string name="describe_help_needed">Describe the help needed</string>
    <string name="send">Send</string>
    <string name="give_feedback">Give us your feedback</string>
    <string name="feedback">Feedback</string>
    <string name="managerTasks">Task Management</string>
    <string name="my_tasks">My Tasks</string>
    <string name="shift_scheduling">Shifts Scheduling</string>
    <string name="shifts">Shifts</string>
    <string name="add_shift">Add Shift</string>

    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter your Email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter your Password</string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_to_mishan">Welcome to Mishan</string>
    <string name="identify_yourself">Identify Yourself!</string>
    <string name="elderly">Elderly</string>
    <string name="staff_member">Staff member</string>
    <string name="manager">Manager</string>
    <string name="about_us">About Us</string>
    <string name="welcome_manager">Welcome Manager</string>
    <string name="welcome_staff_member">Welcome Staff Member</string>
    <string name="enter_passcode">Enter Passcode</string>
    <string name="close_button">Close button</string>
    <string name="add_task">Add Task</string>
    <string name="become_a_member">Become a Member!</string>
    <string name="fullName">Full Name</string>
    <string name="enter_your_full_name">Enter your Full name</string>
    <string name="enter_your_ID">Enter your ID</string>
    <string name="description_about_us">Introducing Sheltered Living Co.! We provide secure, caring housing solutions. Our personalized services and inclusive community create a warm and fulfilling home. Join us for a comfortable and enriching living experience. Contact us!</string>
    <string name="contact_manager">Contact Manager</string>
    <string name="write_your_message">Write your message...</string>
    <string name="call_the_manager">Call the Manager: 0546852484</string>
    <string name="rate">Please rate your experience from 1 to 5 stars</string>
    <string name="write_your_feedback">Write your feedback</string>
    <string name="send_feedback">send feedback</string>
    <string name="profile_image">Profile Image</string>
    <string name="taha_hammody">Taha Hammody</string>
    <string name="volunteer">Volunteer</string>
    <string name="taha_email">Email: t1.s2.h3.21@gmail.com</string>
    <string name="taha_phone">Phone: 0546852484</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_your_email">Enter Email</string>
    <string name="please_enter_email">Please Enter Email</string>
    <string name="full_name">Full Name</string>
    <string name="take_a_photo">Take A Photo</string>
    <string name="add_from_gallery">Add From Gallery</string>
    <string name="save">Save</string>
    <string name="create_profile_invalid_message">Some fields are missing</string>
    <string name="tasks">Tasks</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please">Please</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="phone">Phone</string>
    <string name="staff_members">Staff Members</string>
    <string name="please_add_your_message">Please Add Your Message</string>
    <string name="some_details_are_missing">Some Details Are Missing</string>
    <string name="sent_successfully">Send Successfully!</string>
    <string name="deleted_successfully">Deleted Successfully!</string>
    <string name="saved_successfully">Saved Successfully!</string>
    <string name="feedbacks">Feedbacks</string>
    <string name="message">Message</string>
    <string name="messages">Messages</string>
    <string name="my_staff_members">My Staff Members</string>
    <string name="error">Error</string>
    <string name="this_time_already_exist_in_your_shifts">This time already exists in your shifts</string>
</resources>
