<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/login">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/baseline_arrow_back_2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:text="@string/mishan" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:text="@string/welcome" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_email"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/login"
            android:backgroundTint="@android:color/black"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/btn_Signup"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:backgroundTint="@android:color/black"
            android:layout_marginTop="16dp" />

    </LinearLayout>

</RelativeLayout>
