<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"

    android:background="@drawable/profback">

    <ImageView
        android:id="@+id/backButton3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/close" />
    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/profile"
        android:contentDescription="@string/profile_image"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textStyle="bold"
        android:text="@string/taha_hammody"
        android:gravity="center"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/taha_email"
        android:gravity="center"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/phoneTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/taha_phone"
        android:gravity="center"
        android:layout_marginBottom="16dp" />

</LinearLayout>
