<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/fed"
    >
    <ImageView
        android:id="@+id/closeButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/close"
        android:layout_gravity="end" />
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:hint="@string/enter_your_name"
        android:maxLines="1"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/feedbackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate"
        android:textSize="19sp"
        android:textColor="#000000"
        android:layout_below="@+id/nameEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:rating="0"
        android:numStars="5"
        android:stepSize="1"
        android:contentDescription="@string/rate"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/feedbackEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_your_feedback"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:minLines="5" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_feedback"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/black"
        android:textColor="#FFFFFF"/>

</LinearLayout>
