<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".screens.activites.MainActivity"
    android:background="@drawable/main">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/welcome_to_mishan"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="32dp" />

    <TextView
        android:id="@+id/chooseTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:text="@string/identify_yourself"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/chooseTextView"
        android:orientation="vertical">

        <Button
            android:id="@+id/elderlyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/elderly"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@android:color/black" />

        <Button
            android:id="@+id/staffButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/staff_member"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@android:color/black" />

        <Button
            android:id="@+id/managerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manager"
            android:textSize="18sp"
            android:backgroundTint="@android:color/black" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/aboutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us"
            android:textSize="18sp"
            android:backgroundTint="@android:color/black"
            android:layout_margin="16dp" />

    </FrameLayout>

</RelativeLayout>
