<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/elderly1">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fullName"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_below="@+id/nameEditText"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:hint="@string/enter_your_name"
            android:textColor="#000000"
            android:textStyle="bold"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:layout_below="@+id/titleTextView" />

        <TextView
            android:id="@+id/roomNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_number"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_below="@+id/nameEditText"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/roomNumber"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:hint="@string/enter_room_number"
            android:textColor="#000000"
            android:textStyle="bold"
            android:inputType="numberSigned"
            android:maxLines="1"
            />

        <TextView
            android:id="@+id/descriptionTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_can_we_help"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_below="@+id/roomNumber"
            android:layout_marginTop="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="8dp"
            android:gravity="top|start"
            android:hint="@string/description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top|start"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/helpDescriptionEditText"
            android:layout_marginTop="16dp"
            android:backgroundTint="@android:color/black"
            android:textColor="#FFFFFF"
            android:layout_gravity="center"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>
