<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:contentPadding="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fullName"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_below="@+id/nameEditText"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/roomNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_number"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/descriptionTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_below="@+id/roomNumber"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            android:textColor="#000000"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/delete"
            android:text="@string/delete"
            android:backgroundTint="@color/red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.cardview.widget.CardView>
