<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/contact">

    <ImageView
        android:id="@+id/backButton2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/close" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/contact_manager"
        android:gravity="center"
        android:layout_below="@id/backButton2"
        android:layout_marginBottom="32dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/messageContainer"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:gravity="top|start"
        android:layout_marginBottom="16dp"
        android:layout_below="@id/titleTextView"
        android:hint="@string/description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/messageEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|start"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/messageContainer"
        android:layout_centerHorizontal="true"
        android:text="@string/send"
        android:backgroundTint="@android:color/black"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />
</RelativeLayout>
