<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/about">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/close" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="247dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:layout_toEndOf="@+id/backButton"
        android:gravity="center"
        android:text="@string/about_us"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:layout_marginStart="16dp"
        android:layout_marginTop="364dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textColor="#000000"
        android:text="@string/description_about_us"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>
