<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:contentPadding="16dp"
    app:cardUseCompatPadding="true"
    app:cardElevation="4dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="100dp"
                android:layout_height="100dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nameTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginStart="16dp"/>
                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:textSize="14dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"/>

                <TextView
                    android:id="@+id/emailTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginStart="16dp"/>
                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:layout_marginStart="16dp"/>

                <TextView
                    android:id="@+id/phoneTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginStart="16dp"/>
                <TextView
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:layout_marginStart="16dp"/>

            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/tasksBT"
            android:text="@string/tasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/scheduleBT"
            android:text="@string/shifts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.cardview.widget.CardView>